--- a/mandelbulber2/formula/ui/mandelbulb_bermarte.ui
+++ b/mandelbulber2/formula/ui/mandelbulb_bermarte.ui
@@ -514,7 +514,7 @@
 &lt;tr&gt;&lt;th&gt;Reference&lt;/th&gt;&lt;td&gt;&lt;a href=&quot;http://www.fractalforums.com/theory/mandelbulb-variant/&quot;&gt;http://www.fractalforums.com/theory/mandelbulb-variant/&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;mandelbulb_bermarte 001.fract&lt;br&gt;Sebastian Jennen collection - license Creative Commons  (CC-BY 4.0)/inverse-reciprocal-iqbulb mechanical-ribs.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;mandelbulb_bermarte 001.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mandelbulb_bermarte boxwrap.fract&lt;br&gt;Sebastian Jennen collection - license Creative Commons  (CC-BY 4.0)/inverse-reciprocal-iqbulb mechanical-ribs.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
