--- a/mandelbulber2/formula/ui/transf_abs_rec_fold_xy.ui
+++ b/mandelbulber2/formula/ui/transf_abs_rec_fold_xy.ui
@@ -321,7 +321,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;based of darkbeams recfold transform from Mandelbulb3D.&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/transfAbsRecFoldXY - sierpinski.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
