--- a/mandelbulber2/formula/ui/transf_scale.ui
+++ b/mandelbulber2/formula/ui/transf_scale.ui
@@ -207,7 +207,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;scale - simple scale&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/abox_cylinder.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/abox_octahedron.fract&lt;br&gt;Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/pine-Bulb.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/aboxMod13_002.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/abox_cylinder.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/abox_octahedron.fract&lt;br&gt;Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/pine-Bulb.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
